--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y python3 python3-pip lldb python3-lldb cmake build-essential ninja-build liblldb-14-dev
+        sudo apt-get install -y python3 python3-pip lldb-14 python3-lldb cmake build-essential ninja-build liblldb-14-dev
     - name: Run tests
       run: |
         mkdir dbg
